# propertyguru-lite

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 98f90d8dbc4f_initial_migration.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  admin.py  agent.py  auth.py  client.py  security.py
app/business/: __init__.py  assignment.py  validation.py
app/lib/: __init__.py
app/lib/assignment/: __init__.py  factory.py
app/lib/auth/: __init__.py  models.py  rbac.py  service.py  utils.py
app/models/: __init__.py  lead.py  listing.py  user.py
app/schemas/: auth.py  common.py  lead.py  listing.py  user.py
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/api/: __init__.py  security.py
backend/api/api/: __init__.py  admins.py  agents.py  auth.py  clients.py
backend/api/schema/: __init__.py  auth.py  leads.py  listings.py  users.py
backend/db/: __init__.py  session.py
backend/db/models/: __init__.py  lead.py  listing.py  user.py
backend/lib/: __init__.py  cache.py  redis_client.py  validation.py
backend/lib/admin/: __init__.py  service.py
backend/lib/agent/: __init__.py  service.py
backend/lib/assignment/: __init__.py  factory.py
backend/lib/assignment/methods/: __init__.py  round_robin_load_aware.py
backend/lib/auth/: __init__.py  models.py  service.py  utils.py
backend/lib/client/: __init__.py  service.py
backend/models/: __init__.py  lead.py  listing.py  user.py
data/: admins.csv  agents.csv  leads.csv  listings.csv  load_mock_data.py  users.csv
frontend/: Dockerfile  config.py  main.py  pyproject.toml
frontend/backend_client/: __init__.py  admin.py  agent.py  auth.py  common.py  public.py
frontend/routes/: __init__.py  admin.py  agent.py  auth.py  public.py  shared.py
frontend/static/: styles.css
frontend/templates/admin/: portal_admin_agent_detail.html  portal_admin_agents.html  portal_admin_dashboard.html  portal_admin_inquiries.html  portal_admin_inquiry_detail.html  portal_admin_listing_detail.html  portal_admin_listing_new.html  portal_admin_listings.html
frontend/templates/agent/: portal_agent.html  portal_agent_inquiry_detail.html  portal_agent_listing_detail.html
(+8 files in other folders)
