[project]
name = "propertyguru-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
