[project]
name = "propertyguru-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "fastapi-mail>=1.6.5",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
