[project]
name = "backend"
version = "0.1.0"
description = "Backend project environment"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
